[package]
name = "sway-ast-stubs"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.16"
stacker = "0.1.16"
sway-ast = "0.63.1"
sway-parse = "0.63.1"
sway-error = "0.63.1"
sway-types = "0.63.1"

[build-dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.16"
proc-macro2 = "1.0.86"
quote = "1.0.37"
sway-ast = "0.63.1"
sway-parse = "0.63.1"
sway-error = "0.63.1"
sway-types = "0.63.1"
